# autocore

./: .env.example  .gitignore  .gitkeep  CLAUDE.md  LICENSE  Makefile  README.md  STATUS_CONFIG_APP.md  TODO_TEST.dart  autocore.session.sql  cmdline_example.txt  config_example.txt
app-flutter/: CLAUDE.md  Makefile  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml  test_todos.dart  ui-prototype.html
config-app/: CLAUDE.md  README.md  TODO.md
database/: .env.example  ANALISE_COMPLETA_AUTOCORE_DB.md  CHANGELOG.md  CLAUDE.md  Makefile  PADRONIZACAO_TIPOS_ENUMS.md  README.md  alembic.ini  autocore.db-shm  fix_chassis_constraint.sql  fix_screen_items_types.sql  requirements.txt  reset_database.sh  test_chassis_real.py  test_single_vehicle.py  test_vehicles.py
deploy/: .credentials.example  DEPLOY_MSG.md  README.md  VENV_STRATEGY.md  auto_recovery.sh  check_status.sh  clean_raspberry.sh  debug_simulator.sh  deploy.sh  deploy_to_raspberry.sh  find_raspberry.sh  get_keys.sh  raspberry_setup.sh  setup_bluetooth.sh  setup_boot_timer.sh  setup_wifi_ap.sh  storage-config-64gb.sh  test_mqtt_setup.sh  test_status.sh
docs/: AGENTES-MULTIPLOS-PARALELOS.md  BRAND_ASSETS.md  CHANGELOG.md  (+11 more)
firmware/esp-idf/esp32-relay/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/esp32-display-esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  device_config.h  main.c
firmware/esp32-relay-esp-idf/components/network/: CMakeLists.txt  Kconfig
firmware/esp32-relay-esp-idf/components/network/include/: http_server.h  mqtt_errors.h  mqtt_handler.h  mqtt_momentary.h  mqtt_protocol.h  mqtt_registration.h  mqtt_telemetry.h  wifi_manager.h
firmware/esp32-relay-esp-idf/components/network/src/: mqtt_commands.c  mqtt_handler.c  mqtt_momentary.c  mqtt_protocol.c  mqtt_registration.c  mqtt_telemetry.c  wifi_manager.c
(+1008 files in other folders)
