idf_component_register(
    SRCS 
        "main.c"
    INCLUDE_DIRS 
        "."
    REQUIRES
        freertos
        esp_system
        esp_event
        esp_wifi
        nvs_flash
        esp_netif
        esp_timer
        esp_http_client
        driver
        spi_flash
        display_driver
        touch_driver
        ui_manager
        mqtt
        json
)